# jobs-journal

./: .gitignore  .npmrc  Cargo.toml  LICENSE.txt  README.md  app.config.js  build-info.json  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
.cargo/: config.toml
.github/workflows/: alpha-releases.yml  ci.yml  macos-releases.yml  macos-releases.yml.disabled  release.yml
scripts/: sync-config.js
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri-dev-tools/: Cargo.toml
src-tauri-dev-tools/src/: seed_db.rs
src-tauri/capabilities/: default.json
src-tauri/migrations/: 20250227183855_create_jobs_table.sql  20250311161518_update_jobs_table.sql  20250326091123_create_job_events_table.sql  20250411090450_add_location_jobs_table.sql  20250421143409_add_uuid_jobs_table.sql  20250506091126_add_note_jobs_table.sql
src-tauri/src/: db.rs  lib.rs  main.rs
src-tauri/src/dev/: seed_db.rs
src-tauri/src/models/: job_entry.rs  job_event.rs  job_insert.rs  job_update.rs  mod.rs
src-tauri/src/queries/: get_jobs.rs  job_events_delete.rs  job_events_get.rs  job_events_insert.rs  job_events_insert_trigger.rs  job_events_triggers.rs  jobs_archive_restore.rs  jobs_delete.rs  jobs_get.rs  jobs_insert.rs  jobs_trash_restore.rs  jobs_update.rs  mod.rs  trash_job_entry.rs
src-tauri/src/utils/: mod.rs  query_utils.rs
src-tauri/tests/: query_utils_test.rs
src/app/: layout.tsx  page.tsx  providers.tsx
src/app/about/: page.tsx
src/app/job/: page.tsx
src/app/jobs/[id]/: page.tsx
src/app/settings/: page.tsx
src/components/: ActionProvider.tsx
src/components/Applications/Forms/Insert/: component.tsx
src/components/Applications/Forms/InsertEditJob/: component.tsx  props.types.ts  style.module.scss
src/components/Applications/Forms/InsertEditNote/: component.tsx  props.types.ts  (+1 more)
src/components/Applications/Note/: component.tsx  index.ts  styles.module.scss
src/components/ExternalLink/: component.tsx  props.types.ts
src/components/GlobalModal/: ModalContext.tsx  component.tsx  styles.module.scss
src/components/Icons/: Company.tsx  Delete.tsx  Edit.tsx  Eye.tsx  World.tsx  index.ts
src/components/JobActionsDropdown/: component.tsx  props.types.ts
src/components/Modal/: component.tsx  props.types.ts  provider.tsx
src/components/NavBar/: component.tsx
src/components/StatusChip/: component.tsx  props.types.ts
src/components/_template/: component.tsx  index.ts
src/config/: jobStatus.tsx  jobStatusOptions.tsx  locations.tsx
src/hooks/: useArchiveRestoreJob.tsx  useFetchJobs.ts  useFetchJobs.tsx  useInsertJobEvent.ts  useJobDeletion.ts  useJobDetails.ts  useJobEventLog.ts  useToggleJobArchive.ts  useUpsertJob.ts
src/lib/: daysFromDate.ts
src/queries/: useDeleteJob.tsx  useJobDetails.tsx  useJobEvents.tsx  useJobsList.tsx
src/styles/: globals.scss
src/types/: JobEntry.ts  JobEvent.ts  JobInsert.ts  JobUpdate.ts
src/utilities/: dateFormat.ts
(+12 files in other folders)
