[package]
name = "jobs-journal"
version = "0.1.1-alpha"
description = "A simple open-source job tracking application"
authors = ["Rossano Guenci"]
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.2.5", features = [] }
tauri-plugin-log = "2.2.1"
tokio = { version = "1.43.0", features = ["full"] }
sqlx = { version = "0.8.3", features = ["sqlite", "chrono", "runtime-tokio"] }
