[package]
name = "jobs_journal"
version = "0.1.3-alpha"
description = "A simple open-source job tracking application"
authors = ["Rossano Guenci"]
edition = "2024"
rust-version = "1.86.0"

# Set the default binary to run
default-run = "jobs_journal"

[[bin]]
name = "jobs_journal"
path = "src/main.rs"

[features]
dev = []
cli = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "jobs_journal"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.1.1", features = [] }

[dependencies]
ts-rs = "10.1.0"
serde = { version = "1.0.219", features = ["derive"] }
log = "0.4.27"
tauri = { version = "2.4.1", features = [] }
tauri-plugin-log = "2.3.1"
tokio = { version = "1.44.2", features = ["full"] }
sqlx = { version = "0.8.3", features = ["sqlite", "chrono", "runtime-tokio"] }
serde_json = "1.0.140"
tauri-plugin-opener = "2.2.6"
